# sistema-controle-eletrico

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
sistema_controle_eletrico/: motor.py  screen.py
tests/: test_motor.py
