[tool.poetry]
name = "sistema-controle-eletrico"
version = "0.1.0"
description = ""
authors = ["Potato Mexicano <potatomexicano006@yahoo.com>"]
readme = "README.md"
packages = [{include = "sistema_controle_eletrico"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
