[tool.poetry]
name = "sistema-controle-eletrico"
version = "0.1.0"
description = ""
authors = ["Potato Mexicano <potatomexicano006@yahoo.com>"]
readme = "README.md"
packages = [{include = "sistema_controle_eletrico"}]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.3.5"
tqdm = "^4.65.0"
alive-progress = "^3.1.1"
coverage = "^7.2.5"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
