[tool.poetry]
name = "sistema-controle-eletrico"
version = "0.1.0"
description = ""
authors = ["Potato Mexicano <potatomexicano006@yahoo.com>"]
readme = "README.md"
packages = [{include = "sistema_controle_eletrico"}]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
